@@ -2,6 +2,7 @@
  * Fix SAI's SegmentMetadata min and max primary keys (CASSANDRA-18734)
  * Remove commons-codec dependency (CASSANDRA-18772)
 Merged from 4.1:
+ * Nodetool paxos-only repair is no longer incremental (CASSANDRA-18466)
 Merged from 4.0:
 Merged from 3.11:
 Merged from 3.0:
